--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -54,6 +54,46 @@
   letter-spacing: 2px;
   text-decoration: none;
   text-transform: uppercase;
+  background-color: var(--highlight);
+  color: var(--text);
+  cursor: pointer;
+  border: 3px solid;
+  padding: 0.25em 0.5em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
+    5px 5px 0px 0px;
+  position: relative;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+@media (prefers-color-scheme: dark) {
+  .button54 {
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    letter-spacing: 2px;
+    text-decoration: none;
+    text-transform: uppercase;
+    background-color: var(--text);
+    color: var(--highlight);
+    cursor: pointer;
+    border: 3px solid;
+    padding: 0.25em 0.5em;
+    box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px,
+      4px 4px 0px 0px, 5px 5px 0px 0px;
+    position: relative;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+}
+
+/* .button54Dark {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
   background-color: var(--text);
   color: var(--highlight);
   cursor: pointer;
@@ -65,7 +105,7 @@
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-}
+} */
 
 .button54:hover {
   box-shadow: 0px 0px 0px 0px;
